# limit-order-book-trading-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py  ui_components.py
data/: README.md  sample_execution_schedule.csv  sample_market_events.csv
docs/: methodology.md
docs/images/: README.md
examples/: generate_validation_report.py  run_execution_algorithms.py  run_market_replay.py  run_matching_engine_demo.py  run_order_book_demo.py  run_strategy_backtest.py
notebooks/: 01_order_book_basics.ipynb  02_matching_engine_validation.ipynb  03_execution_algorithms.ipynb  04_market_replay_and_slippage.ipynb
reports/: benchmark_results.csv  execution_results.csv  performance_report.md  profile_report.md  validation_report.md
src/lob_engine/: __init__.py  config.py
src/lob_engine/analytics/: __init__.py  liquidity.py  microstructure.py  slippage.py  transaction_costs.py
src/lob_engine/core/: __init__.py  clock.py  events.py  fast_matching_engine.py  fast_order_book.py  matching_engine.py  order_book.py  orders.py
src/lob_engine/execution/: __init__.py  base.py  implementation_shortfall.py  pov.py  twap.py  (+1 more)
tests/: test_backtester.py  test_cancel_orders.py  test_execution_algorithms.py  test_fast_engine_matches_reference.py  test_fast_replay_determinism.py  test_limit_orders.py  test_market_orders.py  test_market_replay.py  test_matching_engine.py  test_microstructure.py  test_order_book.py  test_orders.py  test_partial_fills.py  test_slippage.py  test_validation_benchmarks.py
(+16 files in other folders)
