[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limit-order-book-trading-engine"
version = "0.1.0"
description = "Event-driven limit order book, matching engine, execution simulator, and market microstructure analytics framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "streamlit>=1.31",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "nbformat>=5.9",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
extend-exclude = "notebooks/.*\\.ipynb"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests", "examples", "app"]
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]
